--- a/src/app/goon-component/goon-component.component.css
+++ b/src/app/goon-component/goon-component.component.css
@@ -7,12 +7,22 @@ label {
     margin-left: 15px;
     margin-bottom: 30px;
 }
-button.btn.btn-danger {
+button.btn.btn-danger, button.btn.btn-warning, .btn {
     width: 90%;
     padding-bottom: 0;
     margin-top: 5px;
     margin-bottom: 10px;
 }
+
+button.btn.btn-danger{
+  margin-top: 3px;
+margin-bottom: 7px;
+}
+
+button.btn.btn-warning, button.btn.btn-info, button.btn.btn-primary {
+  margin-bottom: 5px;
+}
+
 .ref-summary {
     text-align: center;
     width: 89%;
